Added caching! But only one query

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -54,7 +54,7 @@
 #id_show_form {
 	font-size:1.6em; 
 	font-style:italic;
-	color:DarkRed;
+	/* color:Black; /* DarkRed */
 }
 
 #id_show_form:hover {
