--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -44,18 +44,19 @@
 		{% else %}
 			<a id="id_show_form">Click me to create a post</a><br/>
 
-			<script defer async type="text/javascript">
+			<script type="text/javascript">
 				jQuery(document).ready(function(){
     					$('#id_post_form').hide();			
   	 				$('#id_show_form').click(function() {
-    						$('#id_post_form').show();
+   						document.getElementById('id_post_form').style.visibility = "visible";
+						$('#id_post_form').show();
 						$('#id_title').focus();
     						$('#id_show_form').hide();
     						$('#id_line_break').hide();
     						});
 				});
 			</script>
- 			<div id="id_post_form">
+ 			<div id="id_post_form" style="visibility:hidden">
 			{% if posts_left <= 0 %}
 				<p>:( You have used up all of your posts for the day. However, you may still
 				(and are encouraged to) vote and comment on posts made by others.</p>
