--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -52,18 +52,24 @@
 	<p>There are a couple of possibilities:</p>
 	<ol>
 		<li>The incorrect password is being entered.</li>
-				<u>Fix:</u> Please change your password. You may do so by clicking 
-				<a href="{% url 'password_reset' %}">here</a>.<br/><br/>
+		<p>
+			<u>Fix:</u> Please change your password. You may do so by clicking 
+			<a href="{% url 'password_reset' %}">here</a>.
+		</p>
 		<li>The incorrect username is being entered.</li>
-				<u>Fix:</u> If you have made any posts/comments on the site, try searching for them and
-				finding the username attached to them.<br/><br/>
+		<p>
+			<u>Fix:</u> If you have made any posts/comments on the site, try searching for them and
+			finding the username attached to them.
+		</p>
 		<li>The account has been banned.</li>
-				<u>Fix:</u> If you are sure you are entering in the correct username and password,
-				your account is likely banned. 
-				If you haven't posted any ban-worthy material on the site,
-				this is likely the result of someone stealing your password and posting as you. 
-				Depending on my mood, I may return your account to you. 
-				Press your luck by <a href="Mailto:webmaster@youtalkedu.com">emailing me</a>.
+		<p>
+			<u>Fix:</u> If you are sure you are entering in the correct username and password,
+			your account is likely banned. 
+			If you haven't posted any ban-worthy material on the site,
+			this is likely the result of someone stealing your password and posting as you. 
+			Depending on my mood, I may return your account to you. 
+			Press your luck by <a href="Mailto:webmaster@youtalkedu.com">emailing me</a>.
+		</p>
 	</ol><br/>
 
 {% comment %}
