Removing testing elements. Real deal time

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,22 +15,12 @@
 	<meta property="og:image:height" content="200">
 	<meta property="og:site_name" content="YouTalkEdu" />
 	<script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
-	<script type="text/javascript">stLight.options({publisher: "e4aeda60-7d5c-4350-9ed1-654f18e9d8c9", doNotHash: false, doNotCopy: false, hashAddressBar: false, shorten:false});</script>
+	<script type="text/javascript">stLight.options({publisher: "e4aeda60-7d5c-4350-9ed1-654f18e9d8c9", doNotHash: true, doNotCopy: false, hashAddressBar: false, shorten:false});</script>
 {% endblock description %}
 
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
 
 {% block content %}
-
-	<div class="alert alert-error">
-		<button type="button" class="close" data-dismiss="alert">×</button>
-		<h4>
-			This site is currently in testing. 
-			All content and users will be deleted at the end of the testing period.<br/><br/>
-			YouTalkEdu will be officially released in the next week or two so stay tuned!
-		</h4>
-	</div>
-
 	<div class="hero-unit">
 		<img src="{% static 'img/welcome.png' %}" width=600px height=200px alt="Welcome to YouTalkEdu" />
 		<h1 style="font-size:3.0em">It's time to talk education</h1>
@@ -50,10 +40,10 @@
 	{# Social media tags #}
 	<h4>Get your community involved by sharing us!</h4>
 	<div>
-		<span class='st_facebook_vcount' displayText='Facebook' st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
-		<span class='st_twitter_vcount' displayText='Tweet' st_title="I'm making a difference by talking about education on #YouTalkEdu" st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
-		<span class='st_googleplus_vcount' displayText='Google +' st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
-		<span class='st_linkedin_vcount' displayText='LinkedIn' st_url="https://www.YouTalkEdu.com" onclick="javascript:alert('Thanks, but please wait until the site is finished before sharing. If a new tab opened, please close it.')"></span>
+		<span class='st_facebook_vcount' displayText='Facebook' st_url="https://www.YouTalkEdu.com"></span>
+		<span class='st_twitter_vcount' displayText='Tweet' st_title="I'm making a difference by talking about education on #YouTalkEdu" st_url="https://www.YouTalkEdu.com"></span>
+		<span class='st_googleplus_vcount' displayText='Google +' st_url="https://www.YouTalkEdu.com"></span>
+		<span class='st_linkedin_vcount' displayText='LinkedIn' st_url="https://www.YouTalkEdu.com"></span>
 	</div>
 	<br/><br/>
 
