--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -121,7 +121,7 @@
 				{% endfor %}
 				</h5><br/>
 				<h4>Each post/comment has a vote chart like the following:</h4>
-				<img src="{% static 'img/sample_vote.png' %}" alt="Sampe vote chart" /><br/><br/>
+				<img src="{% static 'img/sample_vote.png' %}" alt="Sample vote chart" /><br/><br/>
 				<ul>
 					<li class="space_li">Each vote tube corresponds to a given user type (Red - Students, Blue - Parents, etc).</li>
 					<li class="space_li">The tubes are percentage based -- they indicate the percentage 
