--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,7 @@
 
 /* Templates used on: learn_more */
 .tab-content h3, .tab-content h2, .tab-content h1 {
-	color:DarkRed; /* Blue: #000099, red-orange: #F54F29, brown: #7D5E55 */
+	color:#ff982c; /* Blue: #000099, red-orange: #F54F29, brown: #7D5E55 */
 }
 
 .space_li {
