--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,11 @@
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<div class="alert alert-success">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		<h4 style="text-align:center">YouTalkEdu just launched September 12, 2013!</h4>	
+	</div>
+
 	<div class="hero-unit">
 		<img src="{% static 'img/welcome.png' %}" width=600px height=200px alt="Welcome to YouTalkEdu" />
 		<h1 style="font-size:3.0em">It's time to talk education</h1>
