--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 	{# Social media scripts and tags#}
 	<meta property="og:title" content="YouTalkEdu Home" />
 	<meta property="og:url" content="https://www.YouTalkEdu.com" />
-	<meta property="og:image:secure_url" content="https://www.YouTalkEdu.com{% static 'img/favicon.png' %}" />
+	<meta property="og:image:secure_url" content="{% static 'img/favicon.png' %}" />
 	<meta property="og:image:type" content="image/png">
 	<meta property="og:image:width" content="200">
 	<meta property="og:image:height" content="200">
@@ -26,7 +26,7 @@
 	</div>
 
 	<div class="hero-unit">
-		<img src="{% static 'img/welcome.png' %}" width=600px height=200px alt="Welcome to YouTalkEdu" />
+		<img src="{% static 'img/welcome.png' %}" width="600px" height="200px" alt="Welcome to YouTalkEdu" />
 		<h1 style="font-size:3.0em">It's time to talk education</h1>
 		<p style="font-size:1.2em">
 			Whether you're a student, teacher, school administrator, parent, or just someone interested 
