--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,8 @@
 	<meta property="og:title" content="YouTalkEdu Home" />
 	<meta property="og:url" content="https://www.YouTalkEdu.com" />
 	<meta property="og:image:secure_url" content="{% static 'img/favicon.png' %}" />
+	<meta property="og:image:secure_url" content="{% static 'img/favicon.png' %}" />
+	<meta property="og:image:secure_url" content="{% static 'img/welcome.png' %}" />
 	<meta property="og:image:type" content="image/png" />
 	<meta property="og:site_name" content="YouTalkEdu" />
 	<script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
