--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
 	{% block description %}{% endblock description %}
 	<link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
+	<meta property="og:image:secure_url" content="{% static 'img/favicon.png' %}" />	
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" width="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	{# Good display for all devices #}
