--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,7 @@
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<img src="{% static 'img/favicon.png' %}" width="0px" height="0px" />
 	<div class="alert alert-success">
 		<button type="button" class="close" data-dismiss="alert">×</button>
 		<h4 style="text-align:center">YouTalkEdu just launched September 20, 2013!</h4>	
