Facebook graphic FIXED

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 	{# Social media scripts and tags#}
 	<meta property="og:title" content="YouTalkEdu Home" />
 	<meta property="og:url" content="https://www.YouTalkEdu.com" />
-	<meta property="og:description" content="An outlet for the discussion and debate of all things education.">
+	<meta property="og:description" content="An outlet for the discussion and debate of all things education." />
 	<meta property="og:image" content="{% static 'img/favicon.png' %}" />	
 	<meta property="og:image:secure_url" content="{% static 'img/favicon.png' %}" />
 	<meta property="og:image:width" content="200" />
