DoNotHash YouTalkEdu url

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 	<meta property="og:image:height" content="200" />
 	<meta property="og:site_name" content="YouTalkEdu" />
 	<script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
-	<script type="text/javascript">stLight.options({publisher: "e4aeda60-7d5c-4350-9ed1-654f18e9d8c9", doNotHash: False, doNotCopy: false, hashAddressBar: false, shorten:false});</script>
+	<script type="text/javascript">stLight.options({publisher: "e4aeda60-7d5c-4350-9ed1-654f18e9d8c9", doNotHash: true, doNotCopy: false, hashAddressBar: false, shorten:false});</script>
 {% endblock description %}
 
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
