--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -25,7 +25,7 @@
 			{{ field.label_tag }} {{ field }}
 			</div>
 		{% endfor %}
-		<button class="btn btn-primary" name="update" type="submit">Update</button>	
+		<button class="btn btn-success" name="update" type="submit">Update</button>	
 	</form>
 	</div>
 {% endblock content %}
