Added like us facebook and twitter on home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -49,8 +49,13 @@
 		<span class='st_twitter_vcount' displayText='Tweet' st_title="I'm making a difference by talking about education on #YouTalkEdu" st_url="https://www.YouTalkEdu.com"></span>
 		<span class='st_googleplus_vcount' displayText='Google +' st_url="https://www.YouTalkEdu.com"></span>
 		<span class='st_linkedin_vcount' displayText='LinkedIn' st_url="https://www.YouTalkEdu.com"></span>
-	</div>
-	<br/><br/>
+	</div><br/>
+
+	<h4>Or like us on Facebook and Twitter!</h4>
+	<div>
+		<span style="float:left" class='st_fblike_large' displayText='Facebook Like'></span>
+		<span class='st_twitterfollow_vcount' displayText='Twitter Follow' st_username='YouTalkEdu'></span>
+	</div><br/>
 
 	<h6>Huge thanks to <a href="//twitter.com/theodoremedina">Theodore Medina</a> for the graphic and favicon!</h6>
 
