Added Denver Post header

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,12 @@
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<div class="alert alert-success">
+		<strong>Those interested in my thoughts on education can find a commentary 
+		in the Denver Post blogs located
+		<a href="http://blogs.denverpost.com/opinion/2013/09/23/making-a-case-for-underwater-basket-weaving-in-colorado-schools/41678/">here</a> (thanks much to the Denver Post!!).
+		</strong>
+	</div>
 	<div class="hero-unit">
 		<img src="{% static 'img/welcome.png' %}" width="600px" height="200px" alt="Welcome to YouTalkEdu" />
 		<h1 style="font-size:3.0em">It's time to talk education</h1>
