Added kidding remark about registration in learn more page

--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -25,7 +25,8 @@
 				<p style="font-size:1.2em">YouTalkEdu is a free-to-use website geared towards 
 				bettering the current educational system. Anyone can browse around the content here, 
 				however only those with an account can post, comment, or vote on the content.<br/><br/>
-				Registering is extremely painful and not recommended, but if you wish to do so you may 
+				Registering is extremely painful and not recommended (kidding, of course),
+			       	but if you wish to do so you may 
 				<a href="{% url 'register' %}">register here</a>.</p>
 				<br/>
 {% comment %}
