Removed facebook follow page

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,11 +52,10 @@
 		<span class='st_linkedin_vcount' displayText='LinkedIn' st_url="https://www.YouTalkEdu.com"></span>
 	</div><br/>
 
-	<h4>Or like us on Facebook and Twitter!</h4>
-	<div>
-		<span style="float:left" class='st_fblike_large' displayText='Facebook Like'></span>
+	<h4>
+		Or follow us on Twitter by clicking here: 
 		<span class='st_twitterfollow_vcount' displayText='Twitter Follow' st_username='YouTalkEdu'></span>
-	</div><br/>
+	</h4><br/>
 
 	<h6>Huge thanks to <a href="//twitter.com/theodoremedina">Theodore Medina</a> for the graphic and favicon!</h6>
 
