Added update page to inform visitors of changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,10 +21,10 @@
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
 
 {% block content %}
-	<div class="alert alert-success">
-		<strong>Those interested in my thoughts on education can find a commentary 
-		in the Denver Post blogs located
-		<a href="http://blogs.denverpost.com/opinion/2013/09/23/making-a-case-for-underwater-basket-weaving-in-colorado-schools/41678/">here</a> (thanks much to the Denver Post!!).
+	<div class="alert alert-warning">
+		<strong>
+			Wondering why the page took so long to load? 
+			Please read: <a href="{% url 'update' %}">12/20/2013 Site Update</a>
 		</strong>
 	</div>
 	<div class="hero-unit">
