Better semantics on update page

--- a/templates/update.html
+++ b/templates/update.html
@@ -25,7 +25,7 @@
 		<p>
 			Unfortunately, as a full-time college student, 
 			I simply do not have the time, money, marketing ability, and general effort to try to turn
-			this site into a lively forum for discussion (as much as I wish I could.
+			this site into a lively forum for discussion (as much as I wish I could).
 			Thus, I have decided to make a few changes to the site, outlined below.
 		</p><br/>
 
@@ -44,8 +44,8 @@
 
 			<li>To save money, I plan on limiting the size of the database used for the site.</li>
 			<ul>
-				<li>Consequences: Pages may take a little extra time to load since caching will
-				be disabled. This should be minimal in effect.</li>
+				<li>Consequences: Pages may take a little extra time to load since caching
+				is disabled for the database.</li>
 			</ul>
 
 			<li>There will be <span style="color:red">no security changes</span> made.
