Changed learn more color and added heartbleed update notice

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,7 @@
 
 /* Templates used on: learn_more */
 .tab-content h3, .tab-content h2, .tab-content h1 {
-	color:#ff982c; /* Bootstrap-blue: #006dcc, Orange: #ff982c, Blue: #000099, red-orange: #F54F29, brown: #7D5E55 */
+	color:#F54F29; /* Bootstrap-blue: #006dcc, Orange: #ff982c, Blue: #000099, red-orange: #F54F29, brown: #7D5E55 */
 }
 
 .space_li {
