Updated email address to my gmail

--- a/templates/learn_more.html
+++ b/templates/learn_more.html
@@ -94,7 +94,7 @@
 				your thoughts on what you like/dislike/want to see, please post here.
 				High-ranking feedback will likely result in changes made to the site.<br/>
 				<span style="color:red">If you have found any security issues with the site, 
-				PLEASE do not post them here. <a href="Mailto:webmaster@youtalkedu.com">Email</a> those to me
+				PLEASE do not post them here. <a href="Mailto:chipperdrew@gmail.com">Email</a> those to me
 				and I will be forever grateful.</span></p>
 
 			</div>
