--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -34,7 +34,7 @@
 	</p>
 	<p>
 		If you believe your user rating has been inaccurately calculated, please 
-		<a href="Mailto:webmaster@youtalkedu.com">email me.</a>
+		<a href="Mailto:chipperdrew@gmail.com">email me.</a>
 	</p><br/>
 
 	<h4><a id="2">My post has disappeared</a></h4>
@@ -68,7 +68,7 @@
 			If you haven't posted any ban-worthy material on the site,
 			this is likely the result of someone stealing your password and posting as you. 
 			Depending on my mood, I may return your account to you. 
-			Press your luck by <a href="Mailto:webmaster@youtalkedu.com">emailing me</a>.
+			Press your luck by <a href="Mailto:chipperdrew@gmail.com">emailing me</a>.
 		</p>
 	</ol><br/>
 
@@ -86,12 +86,12 @@
 	<p>
 		Sorry! For security reasons, the number of logins you can attempt before being locked out of 
 		your account is limited. 
-		Please <a href="Mailto:webmaster@youtalkedu.com">email me</a> and I will unlock your account.
+		Please <a href="Mailto:chipperdrew@gmail.com">email me</a> and I will unlock your account.
 	</p><br/>
 
 	<h4><a id="6">My question is not listed</a></h4>
 	<p>
-		<a href="Mailto:webmaster@youtalkedu.com">Email me</a> your question. 
+		<a href="Mailto:chipperdrew@gmail.com">Email me</a> your question. 
 		I will do my best to address it as quickly as I can.
 	</p>
 	<br/><br/>
